--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ MarkupSafe==3.0.2
 mdurl==0.1.2
 pydantic==2.11.4
 pydantic_core==2.33.2
+pydantic_settings==2.9.1
 Pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
