--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.9.0
 certifi==2025.4.26
@@ -14,12 +15,14 @@ httptools==0.6.4
 httpx==0.28.1
 idna==3.10
 Jinja2==3.1.6
+Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+passlib==1.7.4
 pydantic==2.11.4
+pydantic-settings==2.9.1
 pydantic_core==2.33.2
-pydantic_settings==2.9.1
 Pygments==2.19.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
