--- a/.env
+++ b/.env
@@ -3,3 +3,7 @@ HOST=127.0.0.1
 PORT=8000
 RELOAD=True
 DATABASE_URL=sqlite:///./ecommerce.db
+
+JWT_SECRET = "supersecretkey"
+jwt_ALGORITHM = "HS256"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
