--- a/requirements.txt
+++ b/requirements.txt
@@ -18,18 +18,22 @@ httpcore==1.0.9
 httptools==0.6.4
 httpx==0.28.1
 idna==3.10
+iniconfig==2.1.0
 Jinja2==3.1.6
 Mako==1.3.10
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
+packaging==25.0
 passlib==1.7.4
+pluggy==1.6.0
 pyasn1==0.4.8
 pycparser==2.22
 pydantic==2.11.4
 pydantic-settings==2.9.1
 pydantic_core==2.33.2
 Pygments==2.19.1
+pytest==8.3.5
 python-dotenv==1.1.0
 python-jose==3.4.0
 python-multipart==0.0.20
