--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ bcrypt==4.3.0
 certifi==2025.4.26
 cffi==1.17.1
 click==8.1.8
+cloudinary==1.44.0
 colorama==0.4.6
 cryptography==45.0.2
 dnspython==2.7.0
@@ -49,6 +50,7 @@ starlette==0.46.2
 typer==0.15.3
 typing-inspection==0.4.0
 typing_extensions==4.13.2
+urllib3==2.4.0
 uvicorn==0.34.2
 watchfiles==1.0.5
 websockets==15.0.1
