--- a/alembic.ini
+++ b/alembic.ini
@@ -63,7 +63,7 @@ version_path_separator = os
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///./ecommerce.db
+sqlalchemy.url = sqlite+aiosqlite:///./ecommerce.db
 
 
 [post_write_hooks]
